--- a/docker/docker-compose-deploy.yml
+++ b/docker/docker-compose-deploy.yml
@@ -1,9 +1,9 @@
 version: '3.7'
 
 services:
-  my_portfolio_web:
-    container_name: my_portfolio_web
-    image: docker.adhirven.com/my_portfolio_web:0.0.1
+  my_portfolio:
+    container_name: my_portfolio
+    image: docker.adhirven.com/my_portfolio:0.0.1
     restart: unless-stopped
     networks:
       - proxy_net
